k8s/servlet-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servlet-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-servlet
  template:
    metadata:
      labels:
        app: simple-servlet
    spec:
      containers:
      - name: servlet-container
        # For Option 1 use: local/simple-servlet:latest
        # For Option 2 use: YOUR_DOCKERHUB_USERNAME/simple-servlet:0.1
        image: local/simple-servlet:latest 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: servlet-service
spec:
  type: NodePort
  selector:
    app: simple-servlet
  ports:
  - port: 8080
    targetPort: 8080
